--- a/Preview/index.html
+++ b/Preview/index.html
@@ -72,7 +72,7 @@ function F_loadRollover(){} function F_roll(){}
                         <TR VALIGN="TOP" ALIGN="LEFT">
                             <TD></TD>
                             <TD COLSPAN="2" WIDTH="195" ID="Text2" CLASS="TextObject" STYLE="font-size: small; font-weight: bold;">
-                                <P STYLE="font-size: 12px; margin-bottom: 0px;"><B><SPAN STYLE="font-size: auto; font-weight: bold;">(c) 2015<br>Wolfram Plettscher<br>last revision: Dec 26th, 2015</SPAN></B></P>
+                                <P STYLE="font-size: 12px; margin-bottom: 0px;"><B><SPAN STYLE="font-size: auto; font-weight: bold;">(c) 2015<br>Wolfram Plettscher<br>last revision: Feb 17th, 2016</SPAN></B></P>
                             </TD>
                         </TR>
                     </TABLE>
@@ -197,11 +197,10 @@ function F_loadRollover(){} function F_roll(){}
                             <TD WIDTH="650" ID="Text5" CLASS="TextObject" STYLE="color: rgb(0,0,0); font-weight: normal; font-style: normal; background-color: transparent; background-image: none; background-position: top left; padding: 0px; border-left: 0px none rgb(0,255,0); margin-top: 0px; border-top: 10px none rgb(0,255,0); border-right: 0px none rgb(0,255,0); margin-bottom: 0px; border-bottom: 0px none rgb(0,255,0);">
                                 <H3><SPAN STYLE="font-size: 13pt;">My Profile</SPAN></H3>
                                 <P STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">For more than 20 years I have been working on customer facing engagements in the industrial / manufacturing environment as well as the Utility sector. Based on strong hands-on skills in a broad range of IT areas, I today combine technical requirements analysis with business related discussions. My typical job-roles include code-designer, team-leader, project-manager, IT-architect or business-consultant - depending on customer requirements. My preferred engagements define or build innovative proposals incorporating mixed customer and consultant teams exploring all aspects of a future solution.</SPAN></P>
-                                <P STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">My major part of career I was working for the manufacturing and especially automotive industry e.g. designing car diagnosis systems, mobility packet delivery solution or defining Telematics architectures.</SPAN></P>
-                                <P STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">At Vodafone I have been engaged in:</SPAN></P>
+                                <P STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">At Vodafone I recently have been engaged in:</SPAN></P>
                                 <UL>
                                     <LI STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">Financial Sector: Contract and Compliance Management</SPAN></LI>
-                                    <LI STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">Automotive Communication Concepts</SPAN></LI>
+                                    <LI STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">Automotive and Aviation Communication Concepts</SPAN></LI>
                                     <LI STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">Mobile Application: Pre-Sales Configurator</SPAN></LI>
                                     <LI STYLE="font-size: 100%; font-weight: normal; font-style: normal; background-color: transparent;"><SPAN STYLE="font-size: medium;">Mobile Application: Work-force tools</SPAN></LI>
                                 </UL>
@@ -223,7 +222,7 @@ function F_loadRollover(){} function F_roll(){}
                     </TABLE>
                     <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="0">
                         <TR VALIGN="TOP" ALIGN="LEFT">
-                            <TD HEIGHT="74" WIDTH="33"><IMG SRC="./assets/images/autogen/clearpixel.gif" WIDTH="33" HEIGHT="1" BORDER="0" ALT=""></TD>
+                            <TD HEIGHT="159" WIDTH="33"><IMG SRC="./assets/images/autogen/clearpixel.gif" WIDTH="33" HEIGHT="1" BORDER="0" ALT=""></TD>
                             <TD></TD>
                         </TR>
                         <TR VALIGN="TOP" ALIGN="LEFT">
