included T-Systems employer

--- a/Preview/career_and_education.html
+++ b/Preview/career_and_education.html
@@ -14,35 +14,35 @@
 <LINK REL="STYLESHEET" TYPE="text/css" HREF="../html/site.css">
 <STYLE TYPE="text/css" TITLE="NOF_STYLE_SHEET">
 <!--
-body { margin:0px; width: 3647px; }
+body { margin:0px; width: 999px; }
 div#LayoutLYR { float:left; position:absolute; }
-div#NavigationBar1LYR { position:absolute; top:110px; left:22px; width:180px; height:240px; z-index:1 }
-div#NavigationBar2LYR { position:absolute; top:4260px; left:250px; width:651px; height:24px; z-index:2 }
-div#Text20LYR { position:absolute; top:372px; left:23px; width:195px; height:32px; z-index:3 }
+div#NavigationBar1LYR { position:absolute; top:110px; left:22px; width:180px; height:264px; z-index:1 }
+div#NavigationBar2LYR { position:absolute; top:4349px; left:250px; width:651px; height:24px; z-index:2 }
+div#Text20LYR { position:absolute; top:392px; left:23px; width:195px; height:32px; z-index:3 }
 div#Banner1LYR { position:absolute; top:38px; left:251px; width:650px; height:45px; z-index:4 }
-div#Text5LYR { position:absolute; top:2109px; left:250px; width:652px; height:27px; z-index:5 }
-div#Picture19LYR { position:absolute; top:2144px; left:639px; width:263px; height:370px; z-index:6 }
-div#Picture20LYR { position:absolute; top:2144px; left:250px; width:370px; height:272px; z-index:7 }
-div#Text6LYR { position:absolute; top:2692px; left:250px; width:652px; height:58px; z-index:8 }
+div#Text5LYR { position:absolute; top:2189px; left:250px; width:652px; height:27px; z-index:5 }
+div#Picture19LYR { position:absolute; top:2224px; left:639px; width:263px; height:370px; z-index:6 }
+div#Picture20LYR { position:absolute; top:2224px; left:250px; width:370px; height:272px; z-index:7 }
+div#Text6LYR { position:absolute; top:2773px; left:250px; width:652px; height:58px; z-index:8 }
 div#Text8LYR { position:absolute; top:96px; left:250px; width:652px; height:27px; z-index:9 }
-div#Picture21LYR { position:absolute; top:2423px; left:250px; width:370px; height:260px; z-index:10 }
-div#Text11LYR { position:absolute; top:2759px; left:250px; width:652px; height:27px; z-index:11 }
-div#Bild22LYR { position:absolute; top:2804px; left:260px; width:291px; height:400px; z-index:12 }
-div#Bild23LYR { position:absolute; top:2804px; left:600px; width:291px; height:400px; z-index:13 }
-div#Text12LYR { position:absolute; top:3220px; left:250px; width:314px; height:39px; z-index:14 }
-div#Text13LYR { position:absolute; top:3221px; left:594px; width:308px; height:20px; z-index:15 }
-div#Text15LYR { position:absolute; top:3264px; left:250px; width:652px; height:27px; z-index:16 }
-div#Text16LYR { position:absolute; top:1682px; left:250px; width:652px; height:27px; z-index:17 }
-div#Picture24LYR { position:absolute; top:1718px; left:250px; width:469px; height:362px; z-index:18 }
-div#Text17LYR { position:absolute; top:2082px; left:250px; width:652px; height:19px; z-index:19 }
-div#Table2LYR { position:absolute; top:3297px; left:250px; width:652px; height:954px; z-index:20 }
-div#Picture26LYR { position:absolute; top:1295px; left:250px; width:500px; height:354px; z-index:21 }
-div#Text22LYR { position:absolute; top:1658px; left:250px; width:652px; height:19px; z-index:22 }
-div#Tabelle3LYR { position:absolute; top:138px; left:250px; width:650px; height:543px; z-index:23 }
-div#Text25LYR { position:absolute; top:1167px; left:250px; width:652px; height:76px; z-index:24 }
-div#Bild27LYR { position:absolute; top:774px; left:250px; width:500px; height:386px; z-index:25 }
-div#Text23LYR { position:absolute; top:731px; left:250px; width:652px; height:27px; z-index:26 }
-div#Text24LYR { position:absolute; top:1256px; left:250px; width:652px; height:27px; z-index:27 }
+div#Picture21LYR { position:absolute; top:2504px; left:250px; width:370px; height:260px; z-index:10 }
+div#Text11LYR { position:absolute; top:2840px; left:250px; width:652px; height:27px; z-index:11 }
+div#Bild22LYR { position:absolute; top:2885px; left:260px; width:291px; height:400px; z-index:12 }
+div#Bild23LYR { position:absolute; top:2885px; left:600px; width:291px; height:400px; z-index:13 }
+div#Text12LYR { position:absolute; top:3290px; left:250px; width:314px; height:39px; z-index:14 }
+div#Text13LYR { position:absolute; top:3291px; left:594px; width:308px; height:20px; z-index:15 }
+div#Text15LYR { position:absolute; top:3334px; left:250px; width:652px; height:27px; z-index:16 }
+div#Text16LYR { position:absolute; top:1752px; left:250px; width:652px; height:27px; z-index:17 }
+div#Picture24LYR { position:absolute; top:1788px; left:250px; width:469px; height:362px; z-index:18 }
+div#Text17LYR { position:absolute; top:2162px; left:250px; width:652px; height:19px; z-index:19 }
+div#Table2LYR { position:absolute; top:3370px; left:250px; width:652px; height:954px; z-index:20 }
+div#Picture26LYR { position:absolute; top:1355px; left:250px; width:500px; height:354px; z-index:21 }
+div#Text22LYR { position:absolute; top:1718px; left:250px; width:652px; height:19px; z-index:22 }
+div#Tabelle3LYR { position:absolute; top:138px; left:250px; width:650px; height:608px; z-index:23 }
+div#Text25LYR { position:absolute; top:1227px; left:250px; width:652px; height:76px; z-index:24 }
+div#Bild27LYR { position:absolute; top:835px; left:250px; width:500px; height:386px; z-index:25 }
+div#Text23LYR { position:absolute; top:782px; left:250px; width:652px; height:27px; z-index:26 }
+div#Text24LYR { position:absolute; top:1316px; left:250px; width:652px; height:27px; z-index:27 }
 -->
 </STYLE>
 
@@ -392,10 +392,18 @@ div#Text24LYR { position:absolute; top:1256px; left:250px; width:652px; height:2
         <DIV ID="Tabelle3LYR">
             <TABLE ID="Tabelle3" BORDER="1" STYLE="border: 1px solid; height: 139px;border-spacing:2px;border-collapse:separate;">
                 <TR STYLE="height: 57px;">
-                    <TD STYLE="padding: 2px;vertical-align:top;width:157px;" ID="Zelle100">
-                        <P STYLE="margin-bottom: 0px; max-height: 19px; display: block; width: 157px;">04/2015 - to date</P>
+                    <TD STYLE="padding: 2px;vertical-align:top;width:157px;" ID="Zelle102">
+                        <P STYLE="margin-bottom: 0px; max-height: 19px; display: block; width: 157px;">11/2016 - to date</P>
                     </TD>
-                    <TD STYLE="padding: 2px;width:473px;" ID="Zelle99">
+                    <TD STYLE="padding: 2px;width:473px;" ID="Zelle101">
+                        <P STYLE="margin-bottom: 0px; max-height: 57px; display: block; width: 473px;"><B><SPAN STYLE="font-weight: bold;">T-Systems&nbsp; International GmbH<br></SPAN></B>- Senior IT Architect<br>&nbsp;</P>
+                    </TD>
+                </TR>
+                <TR STYLE="height: 57px;">
+                    <TD STYLE="padding: 2px;vertical-align:top;" ID="Zelle100">
+                        <P STYLE="margin-bottom: 0px; max-height: 19px; display: block; width: 157px;">04/2015 - 10/2016</P>
+                    </TD>
+                    <TD STYLE="padding: 2px;" ID="Zelle99">
                         <P STYLE="margin-bottom: 0px; max-height: 57px; display: block; width: 473px;"><B><SPAN STYLE="font-weight: bold;">Vodafone Group Services GmbH<br></SPAN></B>- Principal Consultant<br>&nbsp;</P>
                     </TD>
                 </TR>
@@ -475,17 +483,18 @@ div#Text24LYR { position:absolute; top:1256px; left:250px; width:652px; height:2
             <UL ID="NavigationBar1" STYLE="z-index: 1000; display: none;">
                 <LI ID="Navigationsschaltflaeche1"><A HREF="../index.html" TITLE="Home" STYLE="line-height: 0">Home</A></LI>
                 <LI ID="Navigationsschaltflaeche2"><A HREF="../html/career_and_education.html" TITLE="Career and Education" STYLE="line-height: 0">Career and Education</A></LI>
-                <LI ID="Navigationsschaltflaeche3"><A HREF="../html/assignments_vodafone.html" TITLE="Assignments Vodafone" STYLE="line-height: 0">Assignments Vodafone</A></LI>
-                <LI ID="Navigationsschaltflaeche4"><A HREF="../html/assignment_history.html" TITLE="Assignments Cisco" STYLE="line-height: 0">Assignments Cisco</A></LI>
-                <LI ID="Navigationsschaltflaeche5"><A HREF="../html/assignments_capgemini.html" TITLE="Assignments Capgemini" STYLE="line-height: 0">Assignments Capgemini</A></LI>
-                <LI ID="Navigationsschaltflaeche6"><A HREF="../html/assignments_ibm.html" TITLE="Assignments IBM" STYLE="line-height: 0">Assignments IBM</A></LI>
-                <LI ID="Navigationsschaltflaeche7"><A HREF="../html/endorsements.html" TITLE="Endorsements" STYLE="line-height: 0">Endorsements</A></LI>
-                <LI ID="Navigationsschaltflaeche8"><A HREF="../html/areas_of_expertise.html" TITLE="Areas of Expertise" STYLE="line-height: 0">Areas of Expertise</A></LI>
-                <LI ID="Navigationsschaltflaeche9"><A HREF="../html/contact_me.html" TITLE="Contact Me" STYLE="line-height: 0">Contact Me</A></LI>
-                <LI ID="Navigationsschaltflaeche10"><A HREF="../html/impressum_-_disclaimer.html" TITLE="Impressum / Disclaimer" STYLE="line-height: 0">Impressum / Disclaimer</A></LI>
+                <LI ID="Navigationsschaltflaeche3"><A HREF="../html/assignments_t-systems.html" TITLE="Assignments T-Systems" STYLE="line-height: 0">Assignments T-Systems</A></LI>
+                <LI ID="Navigationsschaltflaeche4"><A HREF="../html/assignments_vodafone.html" TITLE="Assignments Vodafone" STYLE="line-height: 0">Assignments Vodafone</A></LI>
+                <LI ID="Navigationsschaltflaeche5"><A HREF="../html/assignment_history.html" TITLE="Assignments Cisco" STYLE="line-height: 0">Assignments Cisco</A></LI>
+                <LI ID="Navigationsschaltflaeche6"><A HREF="../html/assignments_capgemini.html" TITLE="Assignments Capgemini" STYLE="line-height: 0">Assignments Capgemini</A></LI>
+                <LI ID="Navigationsschaltflaeche7"><A HREF="../html/assignments_ibm.html" TITLE="Assignments IBM" STYLE="line-height: 0">Assignments IBM</A></LI>
+                <LI ID="Navigationsschaltflaeche8"><A HREF="../html/endorsements.html" TITLE="Endorsements" STYLE="line-height: 0">Endorsements</A></LI>
+                <LI ID="Navigationsschaltflaeche9"><A HREF="../html/areas_of_expertise.html" TITLE="Areas of Expertise" STYLE="line-height: 0">Areas of Expertise</A></LI>
+                <LI ID="Navigationsschaltflaeche10"><A HREF="../html/contact_me.html" TITLE="Contact Me" STYLE="line-height: 0">Contact Me</A></LI>
+                <LI ID="Navigationsschaltflaeche11"><A HREF="../html/impressum_-_disclaimer.html" TITLE="Impressum / Disclaimer" STYLE="line-height: 0">Impressum / Disclaimer</A></LI>
             </UL>
         </DIV>
-        <DIV ID="NavigationBar2LYR" STYLE="text-align: center; z-index: 1000;" CLASS="TextNavBar">[<A CLASS="nof-navPositioning" HREF="../index.html">Home</A>] [Career&nbsp;and&nbsp;Education] [<A CLASS="nof-navPositioning" HREF="../html/assignments_vodafone.html">Assignments&nbsp;Vodafone</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignment_history.html">Assignments&nbsp;Cisco</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignments_capgemini.html">Assignments&nbsp;Capgemini</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignments_ibm.html">Assignments&nbsp;IBM</A>] [<A CLASS="nof-navPositioning" HREF="../html/endorsements.html">Endorsements</A>] [<A CLASS="nof-navPositioning" HREF="../html/areas_of_expertise.html">Areas&nbsp;of&nbsp;Expertise</A>] [<A CLASS="nof-navPositioning" HREF="../html/contact_me.html">Contact&nbsp;Me</A>] [<A CLASS="nof-navPositioning" HREF="../html/impressum_-_disclaimer.html">Impressum&nbsp;/&nbsp;Disclaimer</A>]</DIV>
+        <DIV ID="NavigationBar2LYR" STYLE="text-align: center; z-index: 1000;" CLASS="TextNavBar">[<A CLASS="nof-navPositioning" HREF="../index.html">Home</A>] [Career&nbsp;and&nbsp;Education] [<A CLASS="nof-navPositioning" HREF="../html/assignments_t-systems.html">Assignments&nbsp;T-Systems</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignments_vodafone.html">Assignments&nbsp;Vodafone</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignment_history.html">Assignments&nbsp;Cisco</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignments_capgemini.html">Assignments&nbsp;Capgemini</A>] [<A CLASS="nof-navPositioning" HREF="../html/assignments_ibm.html">Assignments&nbsp;IBM</A>] [<A CLASS="nof-navPositioning" HREF="../html/endorsements.html">Endorsements</A>] [<A CLASS="nof-navPositioning" HREF="../html/areas_of_expertise.html">Areas&nbsp;of&nbsp;Expertise</A>] [<A CLASS="nof-navPositioning" HREF="../html/contact_me.html">Contact&nbsp;Me</A>] [<A CLASS="nof-navPositioning" HREF="../html/impressum_-_disclaimer.html">Impressum&nbsp;/&nbsp;Disclaimer</A>]</DIV>
         <DIV ID="Text20LYR" CLASS="TextObject">
             <P STYLE="margin-bottom: 0px;"><B><SPAN STYLE="font-size: auto; font-weight: bold;">(c) 2016<br>Wolfram Plettscher</SPAN></B></P>
         </DIV>
